# ChangeLog for sys-apps/moreutils
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Jul 2007; Mike Pagano <mpagano@gmail.com> -moreutils-0.20.ebuild,
  +moreutils-0.22.ebuild:
  Version bump. Remove old versions

  09 Jan 2007; Markus Ullmann <jokey@gentoo.org> -moreutils-0.19.ebuild:
  Drop old

  03 Jan 2007; Jorge Vargas (elpargo) <jorge.vargas@gmail.com>
  +moreutils-0.20.ebuild:
  version bump

  28 Nov 2006; Stefan Schweizer <genstef@gentoo.org> -moreutils-0.18.ebuild:
  remove obsolete old ebuilds, thanks pcheck

  25 Nov 2006; Jorge Vargas (elpargo) <jorge.vargas@gmail.com>
  +moreutils-0.19.ebuild:
  bump

  08 Oct 2006; David Shakaryan <d@ompty.org> -moreutils-0.14.ebuild,
  -moreutils-0.16.ebuild:
  Remove older versions.

  06 Oct 2006; Jorge Vargas (elpargo) <jorge.vargas@gmail.com>
  +moreutils-0.18.ebuild:
  version bump, thanks to Jan Spakula aka bender02

  04 Sep 2006; Tiziano Müller <gentoo@dev-zero.ch> +moreutils-0.16.ebuild:
  Version bump.

  14 Jul 2006; Tiziano Müller <gentoo@dev-zero.ch> ChangeLog:
  New ebuild for bug 140111
