@@ -1,4 +1,4 @@
-DIST moreutils_0.22.tar.gz 26751 RMD160 f1198187e6e977e63e93d98cb74446e3626e7fdd SHA1 fc519c2fa767ad7663341b69d38a026ba4b189c7 SHA256 146f021898fd2b73e690c50d3b24f79ff11cdba3d463f1d2bece83639673ac27
-EBUILD moreutils-0.22.ebuild 1228 RMD160 609094ef79bdfbb8a4c50a61533ae62670d273ee SHA1 e40f4ee3908ddef13eea1e86bc03c2b0e0f0177c SHA256 1a2ea74fd0d0ef24ec1c0b3a28c688ac1322e55cb10f4e2df5410cba5a02ec48
-MISC ChangeLog 1110 RMD160 8d34669b16f33675d5132bb4fa68d7d1a7247ba1 SHA1 4e3fb5c7732d28f295a7300f0c34322baf4dbe44 SHA256 7b7e53f210a469a83f6f4ec63d805f514e1821c7347df1f5ef76d660d2486ed9
+DIST moreutils_0.26.tar.gz 30859 RMD160 52597393f2ef437b03ff482f33096349eb27ab7e SHA1 40db444791e5315a14759ac2c78072040878007c SHA256 ab52906f43f5d89ad4894e5a65e64c2a00a7837e1e3492601fc8a2cfde4b10b8
+EBUILD moreutils-0.26.ebuild 1257 RMD160 c92f7b27997e003e1cd88b55d55443ed15b07476 SHA1 1e0fdeb2088bfd50e91b4293cea5bbc6f37c0325 SHA256 09112538f8cd2a7da017ca38810e6411fa66453f7dc4732f697a5cdae927737c
+MISC ChangeLog 1257 RMD160 51b109d6a10e62e5dd27a87e4907ed0bbc622073 SHA1 ac2da1d560b2140dc0d8ba13ed641f21a50b6751 SHA256 5af01e84740a9a194d959382d43b3944ddba464f7cc0ec8b2f37ad68a1cf7ffb
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
